[gd_scene load_steps=6 format=3 uid="uid://clxqks8tq3l2m"]

[ext_resource type="Script" path="res://Objects/TransportBucket/TransportBucketPlaceable/transport_bucket_placeable.gd" id="1_lvkup"]
[ext_resource type="PackedScene" uid="uid://bgqgiy1o0dn8e" path="res://Objects/TransportBucket/transport_bucket.tscn" id="2_mchnb"]
[ext_resource type="Texture2D" uid="uid://hoqmxhp5bhdr" path="res://Assets/0x72_16x16RobotTileset.v1.png" id="2_sbsxu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_02w2g"]
atlas = ExtResource("2_sbsxu")
region = Rect2(160, 176, 16, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_vuay4"]
radius = 15.0

[node name="TransportBucketPlaceable" type="Node2D"]
script = ExtResource("1_lvkup")
transport_bucket_packed_scene = ExtResource("2_mchnb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_02w2g")

[node name="PowerConnectorDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerConnectorDetectionArea"]
shape = SubResource("CircleShape2D_vuay4")

[connection signal="area_entered" from="PowerConnectorDetectionArea" to="." method="_on_power_connector_detection_area_area_entered"]
[connection signal="area_exited" from="PowerConnectorDetectionArea" to="." method="_on_power_connector_detection_area_area_exited"]
